# autouds

./: .gitignore  README.md  pyproject.toml
src/autouds/: __init__.py  __main__.py  _handler.py  _models.py  _tables.py  app.py
tests/: mock_ecu.py  tester.py
