[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "autouds"
dynamic = ["version"]
description = "UDS (Unified Diagnostic Services) diagnostic tool over DoIP — ISO 14229-1"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "leno augenstern"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]
dependencies = [
    "autodoip>=0.1.4",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/leno166/autouds"
Source = "https://github.com/leno166/autouds"

[project.scripts]
autouds = "autouds.__main__:main"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.0.3",
    "twine>=6.2.0",
]